--- a/src/Components/Card/Card.module.scss
+++ b/src/Components/Card/Card.module.scss
@@ -3,10 +3,15 @@
   height: 200px;
   position: relative;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.24);
 
   .card {
-    width: 100%;
-    border-radius: 15px;
+    max-width: calc(100% - 1em);
+    max-height: calc(100% - 1em);
     cursor: pointer;
   }
 
@@ -15,7 +20,8 @@
   }
   
   .flipped {
-    background: linear-gradient(180deg, hsla(205, 84%, 36%, 1) 0%, hsla(136, 82%, 72%, 1) 100%);
+    background-color: #a1dddd;
+    background-image: linear-gradient(45deg, #a1dddd 0%, #ffffff 100%);
     width: 100%;
     height: 100%;
     position: absolute;
@@ -24,7 +30,6 @@
     left: 0;
     right: 0;
     pointer-events: none;
-    border-radius: 15px;
-    opacity: .3;
+    border-radius: 10px;
   }
 }
