--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,9 @@
 /*
  * COLORS
  */
+$aqua-island: #A1DDDD;
 $verdigris: #47ADA3;
 $blue-munsell: #2B8BA6;
 $prussian-blue: #162B3C;
+
+$card-width: 5em;
