--- a/src/Components/Card/Card.module.scss
+++ b/src/Components/Card/Card.module.scss
@@ -1,27 +1,33 @@
-.container {
-  width: 200px;
-  height: 200px;
-  position: relative;
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.24);
+@import '../../styles/variables';
 
-  .card {
-    max-width: calc(100% - 1em);
-    max-height: calc(100% - 1em);
+.container {
+  width: $card-width;
+  height: $card-width;
+  position: relative;
+  margin-bottom: 1em;
+  perspective: 26em;
+
+  .content {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.24);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 1s;
+    transform-style: preserve-3d;
     cursor: pointer;
   }
 
-  .notFlipped {
-    display: none;
+  .front,
+  .back {
+    backface-visibility: hidden;
   }
-  
-  .flipped {
-    background-color: #a1dddd;
-    background-image: linear-gradient(45deg, #a1dddd 0%, #ffffff 100%);
+
+  .back {
+    background-color: $aqua-island;
+    background-image: linear-gradient(45deg, $aqua-island 0%, #ffffff 100%);
     width: 100%;
     height: 100%;
     position: absolute;
@@ -31,5 +37,16 @@
     right: 0;
     pointer-events: none;
     border-radius: 10px;
+  }
+
+  .front {
+    max-width: calc(100% - 1em);
+    max-height: calc(100% - 1em);
+    transform: rotateY( 180deg );
+  }
+  
+  .flipped {
+    transform: rotateY( 180deg );
+    transition: transform 0.5s;
   }
 }
