--- a/src/Components/HighscoreList/HighscoreList.module.scss
+++ b/src/Components/HighscoreList/HighscoreList.module.scss
@@ -1,15 +1,21 @@
 @import '../../styles/variables';
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .list {
   margin: 0;
   padding: 0;
-  width: 50%;
+  width: calc(min(90%, 15em));
 }
 
 .item {
   display: flex;
   justify-content: space-between;
-  margin: .5em 0;
+  margin: .4em 0;
 }
 
 .place {
@@ -17,8 +23,8 @@
   background-color: $blue-munsell;
   color: white;
   font-weight: 600;
-  width: 1.5em;
-  height: 1.5em;
+  width: 1.4em;
+  height: 1.4em;
   display: inline-flex;
   justify-content: center;
   align-items: center;
