--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -32,13 +32,22 @@ main {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 1.5em;
   font-family: "Play", serif;
   color: $blue-munsell;
+  text-align: center;
+  margin: .5em 0;
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 1.2em;
+  font-family: "Play", serif;
+  color: $blue-munsell;
+  margin: 0 0 .2em 0;
+}
+
+h3 {
+  font-size: 1.2em;
   font-family: "Play", serif;
   color: $blue-munsell;
 }
@@ -66,6 +75,7 @@ input {
 }
 
 button {
+  font-family: "Karla", sans-serif;
   padding: .5em;
   margin: 0 1em;
   color: #fff;
@@ -75,6 +85,9 @@ button {
   cursor: pointer;
   font-weight: 600;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.18);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 
   &:hover,
   &:active {
